# ros2_gz_multi_drone_replay_sim

./: .gitignore  README.md
src/multi_drone_traj_replay/: package.xml  setup.cfg  setup.py  traj_eval_Ours.csv
src/multi_drone_traj_replay/launch/: full_replay.launch.py
src/multi_drone_traj_replay/models/drone/: model.sdf
src/multi_drone_traj_replay/models/goal_marker/: model.sdf
src/multi_drone_traj_replay/models/iris_drone/: model.config  model.sdf
src/multi_drone_traj_replay/models/iris_drone/urdf/: iris.urdf
src/multi_drone_traj_replay/models/tail_marker/: model.sdf
src/multi_drone_traj_replay/multi_drone_traj_replay/: traj_replay_node.py
src/multi_drone_traj_replay/worlds/: maze_world_with_ground.sdf  plane_world.sdf
